# Chip8

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: GenerateCimguiBindings.cmake
include/: audio.h  chip8.h  context.h  renderer.h  shader.h  ui.h
shaders/compiled/: chip8.frag.dxil  chip8.frag.spv  chip8.vert.dxil
shaders/source/: chip8.frag.hlsl  chip8.vert.hlsl
src/: audio.c  chip8.c  main.c  renderer.c  shader.c  ui.c
